--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.syncapse</groupId>
-    <artifactId>externalapp</artifactId>
+    <artifactId>externalapp-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>Jive SBS implementation project. This is the parent pom</description>
     <packaging>pom</packaging>
@@ -167,19 +167,19 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.5</version>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs</artifactId>
-            <version>1.6.2.1</version>
-            <!--<scope>test</scope>-->
+            <artifactId>specs_2.8.0.Beta1-RC8</artifactId>
+            <version>1.6.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.8.2</version>
-            <!--<scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -188,7 +188,7 @@
 	Modify these properties to conform to your own environment
 	-->
     <properties>
-        <scala.version>2.7.7</scala.version>
+        <scala.version>2.8.0.RC3</scala.version>
         <customer.name>externalapp</customer.name>
         <customer.version>1.0-SNAPSHOT</customer.version>
         <sbs.shortversion>4.0.5</sbs.shortversion>
@@ -215,6 +215,11 @@
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
+        <repository>
+            <id>scala-tools-snapshot</id>
+            <name>Scala Tools Snapshot Repository</name>
+            <url>http://scala-tools.org/repo-snapshots/</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -222,6 +227,11 @@
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>scala-tools-snapshot</id>
+            <name>Scala Tools Snapshot Repository</name>
+            <url>http://scala-tools.org/repo-snapshots/</url>
         </pluginRepository>
     </pluginRepositories>
 
