--- a/web/pom.xml
+++ b/web/pom.xml
@@ -25,7 +25,7 @@
 
     <parent>
         <groupId>com.syncapse</groupId>
-        <artifactId>externalapp</artifactId>
+        <artifactId>externalapp-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
