--- a/web/pom.xml
+++ b/web/pom.xml
@@ -265,6 +265,11 @@
             <version>0.9.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.3</version>
+        </dependency>
         <!-- The dependencies below should be used when a project needs to overlay any resources in the Jive SBS
              directory "resources.scripts".  In order for the minimized Javascript files to be generated, these
              dependencies must be present so the yui-compressor task can run -->
