--- a/externalapp/src/main/plugin/plugin.xml
+++ b/externalapp/src/main/plugin/plugin.xml
@@ -1,10 +1,10 @@
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://www.jivesoftware.com/schemas/clearspace/1_1/plugin.xsd">
     <name>scalaplug</name>
-    <description>scalaplug</description>
-    <author></author>
+    <description>Supports External Applications</description>
+    <author>syncapse</author>
     <version>1.0.0</version>
-    <minServerVersion>1.10</minServerVersion>
+    <minServerVersion>4.0.5</minServerVersion>
     <!-- you will want to change your class name here! -->
 
     <!-- The <components> element contains additions or customizations to
