--- a/externalapp/src/main/resources/plugin_i18n.properties
+++ b/externalapp/src/main/resources/plugin_i18n.properties
@@ -1,1 +1,3 @@
-#put your custom i18n values here
+admin.menu.externalapp=External Applications
+admin.section.externalapp.list=Application List
+admin.item.externalapp.applist.desc=App list
