fixing some action stuff.

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -500,7 +500,7 @@ the time that it takes for cargo to startup Tomcat. -->
                             </configuration>
                         </configuration>
                     </plugin>
-                    <!-- <plugin>
+                    <plugin>
                         <groupId>org.zeroturnaround</groupId>
                         <artifactId>javarebel-maven-plugin</artifactId>
                         <executions>
@@ -517,10 +517,10 @@ the time that it takes for cargo to startup Tomcat. -->
                                 <fallback>default</fallback>
                                 <resources>
                                     <resource>
-                                        <directory>${basedir}/../myplugin/target/classes</directory>
+                                        <directory>${basedir}/../externalapp/target/classes</directory>
                                     </resource>
                                     <resource>
-                                         <jarset>${basedir}/../myplugin/target/dependency</jarset>
+                                         <jarset>${basedir}/../externalapp/target/dependency</jarset>
                                     </resource>
                                 </resources>
                             </classpath>
@@ -528,12 +528,12 @@ the time that it takes for cargo to startup Tomcat. -->
                                 <path>${basedir}/target/${customer.name}-${customer.version}-sbs-${sbs.version}</path>
                             </war>
                         </configuration>
-                    </plugin> -->
+                    </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
-    <!-- 
+    <!--                                                                                                                                                                    
 	 Generate reports with mvn site
 	 -->
     <reporting>
