--- a/externalapp/src/main/plugin/plugin.xml
+++ b/externalapp/src/main/plugin/plugin.xml
@@ -26,11 +26,11 @@
 
     <components>
         <component id="admin-console">
-            <tab id="externalapp" name="admin.menu.externalapp" url="facebook-actions-admin!input.jspa"
+            <tab id="externalapp" name="admin.menu.externalapp" url="external-apps!input.jspa"
                     description="admin.section.externalapp.applist.desc" role="Manage System">
-                <section id="section.externalapp" name="admin.section.externalapp.list" url="facebook-actions-admin!input.jspa"
+                <section id="section.externalapp" name="admin.section.externalapp.list" url="external-apps!input.jspa"
                         description="admin.section.externalapp.applist.desc">
-                    <item id="externalapp-applist" name="admin.section.externalapp.list" url="facebook-actions-admin!input.jspa"
+                    <item id="externalapp-applist" name="admin.section.externalapp.list" url="external-apps!input.jspa"
                             description="admin.item.externalapp.applist.desc"/>
                 </section>
             </tab>
